# RagiMagick

./: .gitignore  .gitmodules  README.md
RagiMagick/: .clang-format  CMakeLists.txt  CodeFormat.cmake  RagiMagick.sln  main.cpp  win-cache-clear.bat  win-make.bat
RagiMagick/RagiMagick/: CMakeLists.txt  RagiMagick.vcxproj  main.cpp  pch.h
RagiMagick/RagiMagick/image/: Bitmap.cpp  Bitmap.h  BitmapConverter.cpp  BitmapConverter.h  types.h
RagiMagick/RagiMagick/image/filters/: GrayscaleFilter.cpp  NegativeFilter.h
RagiMagick/RagiMagick/ragii/: CMakeLists.txt
RagiMagick/RagiMagick/ragii/image/: Bitmap.cpp  Bitmap.h  BitmapConverter.cpp  CMakeLists.txt
RagiMagick/RagiMagick/ragii/image/filters/: BinaryFilter.cpp  BinaryFilter.h  CMakeLists.txt  GaussianFilter.cpp  GaussianFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  IImageFilter.h  LaplacianFilter.cpp  LaplacianFilter.h  MosaicFilter.cpp  MosaicFilter.h  NegativeFilter.cpp  common.h  types.h
RagiMagick/RagiMagick/ragii/image/formats/bitmap/: BitmapFileHeader.h  BitmapHeader.h  BitmapInfoHeader.h
RagiMagick/RagiMagick/ragii/text/: text.h
RagiMagick/RagiMagick/ragii/type/: type_traits.h
RagiMagick/config/: UserConfig.cmake.template
RagiMagick/external_lib/: setup.sh
RagiMagick/lib/ragii/: CMakeLists.txt
RagiMagick/lib/ragii-image/: CMakeLists.txt
RagiMagick/lib/ragii-image/include/: Bitmap.h  BitmapConverter.h  util.h
RagiMagick/lib/ragii-image/include/filters/: BinaryFilter.h  GaussianFilter.h  GrayscaleFilter.h  IImageFilter.h  LaplacianFilter.h  MosaicFilter.h  NegativeFilter.h  common.h  types.h
RagiMagick/lib/ragii-image/include/formats/bitmap/: BitmapFileHeader.h  BitmapHeader.h  BitmapInfoHeader.h
RagiMagick/lib/ragii-image/src/: Bitmap.cpp  BitmapConverter.cpp  util.cpp
RagiMagick/lib/ragii-image/src/filters/: BinaryFilter.cpp  GaussianFilter.cpp  GrayscaleFilter.cpp  LaplacianFilter.cpp  MosaicFilter.cpp  NegativeFilter.cpp
RagiMagick/lib/ragii/include/hardware/: cpu_info.h
RagiMagick/lib/ragii/include/memory/: memory.h
RagiMagick/lib/ragii/include/text/: text.h
RagiMagick/lib/ragii/include/type/: type_traits.h
RagiMagick/lib/ragii/src/: dummy.cpp
RagiMagick/lib/ragii/src/hardware/: cpu_info.cpp
RagiMagick/lib/ragii/text/: text.h
RagiMagick/lib/ragii/type/: type_traits.h
RagiMagick/ragii/: CMakeLists.txt
RagiMagick/ragii-image/: Bitmap.cpp  BitmapConverter.cpp  BitmapConverter.h  CMakeLists.txt
RagiMagick/ragii-image/filters/: BinaryFilter.cpp  GaussianFilter.cpp  GaussianFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  LaplacianFilter.cpp  MosaicFilter.cpp  MosaicFilter.h  NegativeFilter.h  types.h
RagiMagick/ragii-image/formats/bitmap/: BitmapFileHeader.h  BitmapInfoHeader.h
RagiMagick/ragii-image/include/: Bitmap.h
RagiMagick/ragii-image/include/filters/: BinaryFilter.h  GaussianFilter.h  IImageFilter.h  LaplacianFilter.h  MosaicFilter.h  NegativeFilter.h  common.h
RagiMagick/ragii-image/include/formats/bitmap/: BitmapHeader.h
RagiMagick/ragii-image/src/: Bitmap.cpp  BitmapConverter.cpp
RagiMagick/ragii-image/src/filters/: BinaryFilter.cpp  GrayscaleFilter.cpp  LaplacianFilter.cpp  MosaicFilter.cpp  NegativeFilter.cpp
RagiMagick/ragii/text/: text.h
RagiMagick/ragii/type/: type_traits.h
RagiMagick/src/: main.cpp
